fix(locks): updated coroutine naming and added aio, dst tests
