# internal/app/subsystems/api/grpc/api/lock.pb.go
@@ -193,7 +193,7 @@ func (x *AcquireLockResponse) GetLock() *Lock {
 	return nil
 }
 
-type BulkHeartbeatRequest struct {
+type HeartbeatRequest struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
@@ -202,8 +202,8 @@ type BulkHeartbeatRequest struct {
 	Timeout   int64  `protobuf:"varint,2,opt,name=timeout,proto3" json:"timeout,omitempty"`
 }
 
-func (x *BulkHeartbeatRequest) Reset() {
-	*x = BulkHeartbeatRequest{}
+func (x *HeartbeatRequest) Reset() {
+	*x = HeartbeatRequest{}
 	if protoimpl.UnsafeEnabled {
 		mi := &file_internal_app_subsystems_api_grpc_api_lock_proto_msgTypes[3]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -211,13 +211,13 @@ func (x *BulkHeartbeatRequest) Reset() {
 	}
 }
 
-func (x *BulkHeartbeatRequest) String() string {
+func (x *HeartbeatRequest) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*BulkHeartbeatRequest) ProtoMessage() {}
+func (*HeartbeatRequest) ProtoMessage() {}
 
-func (x *BulkHeartbeatRequest) ProtoReflect() protoreflect.Message {
+func (x *HeartbeatRequest) ProtoReflect() protoreflect.Message {
 	mi := &file_internal_app_subsystems_api_grpc_api_lock_proto_msgTypes[3]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -229,26 +229,26 @@ func (x *BulkHeartbeatRequest) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use BulkHeartbeatRequest.ProtoReflect.Descriptor instead.
-func (*BulkHeartbeatRequest) Descriptor() ([]byte, []int) {
+// Deprecated: Use HeartbeatRequest.ProtoReflect.Descriptor instead.
+func (*HeartbeatRequest) Descriptor() ([]byte, []int) {
 	return file_internal_app_subsystems_api_grpc_api_lock_proto_rawDescGZIP(), []int{3}
 }
 
-func (x *BulkHeartbeatRequest) GetProcessId() string {
+func (x *HeartbeatRequest) GetProcessId() string {
 	if x != nil {
 		return x.ProcessId
 	}
 	return ""
 }
 
-func (x *BulkHeartbeatRequest) GetTimeout() int64 {
+func (x *HeartbeatRequest) GetTimeout() int64 {
 	if x != nil {
 		return x.Timeout
 	}
 	return 0
 }
 
-type BulkHeartbeatResponse struct {
+type HeartbeatResponse struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
@@ -256,8 +256,8 @@ type BulkHeartbeatResponse struct {
 	Status int32 `protobuf:"varint,1,opt,name=status,proto3" json:"status,omitempty"`
 }
 
-func (x *BulkHeartbeatResponse) Reset() {
-	*x = BulkHeartbeatResponse{}
+func (x *HeartbeatResponse) Reset() {
+	*x = HeartbeatResponse{}
 	if protoimpl.UnsafeEnabled {
 		mi := &file_internal_app_subsystems_api_grpc_api_lock_proto_msgTypes[4]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -265,13 +265,13 @@ func (x *BulkHeartbeatResponse) Reset() {
 	}
 }
 
-func (x *BulkHeartbeatResponse) String() string {
+func (x *HeartbeatResponse) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*BulkHeartbeatResponse) ProtoMessage() {}
+func (*HeartbeatResponse) ProtoMessage() {}
 
-func (x *BulkHeartbeatResponse) ProtoReflect() protoreflect.Message {
+func (x *HeartbeatResponse) ProtoReflect() protoreflect.Message {
 	mi := &file_internal_app_subsystems_api_grpc_api_lock_proto_msgTypes[4]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -283,12 +283,12 @@ func (x *BulkHeartbeatResponse) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use BulkHeartbeatResponse.ProtoReflect.Descriptor instead.
-func (*BulkHeartbeatResponse) Descriptor() ([]byte, []int) {
+// Deprecated: Use HeartbeatResponse.ProtoReflect.Descriptor instead.
+func (*HeartbeatResponse) Descriptor() ([]byte, []int) {
 	return file_internal_app_subsystems_api_grpc_api_lock_proto_rawDescGZIP(), []int{4}
 }
 
-func (x *BulkHeartbeatResponse) GetStatus() int32 {
+func (x *HeartbeatResponse) GetStatus() int32 {
 	if x != nil {
 		return x.Status
 	}
@@ -420,42 +420,41 @@ var file_internal_app_subsystems_api_grpc_api_lock_proto_rawDesc = []byte{
 	0x61, 0x74, 0x75, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74,
 	0x75, 0x73, 0x12, 0x1e, 0x0a, 0x04, 0x6c, 0x6f, 0x63, 0x6b, 0x18, 0x02, 0x20, 0x01, 0x28, 0x0b,
 	0x32, 0x0a, 0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e, 0x4c, 0x6f, 0x63, 0x6b, 0x52, 0x04, 0x6c, 0x6f,
-	0x63, 0x6b, 0x22, 0x4f, 0x0a, 0x14, 0x42, 0x75, 0x6c, 0x6b, 0x48, 0x65, 0x61, 0x72, 0x74, 0x62,
-	0x65, 0x61, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1d, 0x0a, 0x0a, 0x70, 0x72,
-	0x6f, 0x63, 0x65, 0x73, 0x73, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09,
-	0x70, 0x72, 0x6f, 0x63, 0x65, 0x73, 0x73, 0x49, 0x64, 0x12, 0x18, 0x0a, 0x07, 0x74, 0x69, 0x6d,
-	0x65, 0x6f, 0x75, 0x74, 0x18, 0x02, 0x20, 0x01, 0x28, 0x03, 0x52, 0x07, 0x74, 0x69, 0x6d, 0x65,
-	0x6f, 0x75, 0x74, 0x22, 0x2f, 0x0a, 0x15, 0x42, 0x75, 0x6c, 0x6b, 0x48, 0x65, 0x61, 0x72, 0x74,
-	0x62, 0x65, 0x61, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x16, 0x0a, 0x06,
-	0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73, 0x74,
-	0x61, 0x74, 0x75, 0x73, 0x22, 0x58, 0x0a, 0x12, 0x52, 0x65, 0x6c, 0x65, 0x61, 0x73, 0x65, 0x4c,
-	0x6f, 0x63, 0x6b, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1f, 0x0a, 0x0b, 0x72, 0x65,
-	0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52,
-	0x0a, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x49, 0x64, 0x12, 0x21, 0x0a, 0x0c, 0x65,
-	0x78, 0x65, 0x63, 0x75, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x0b, 0x65, 0x78, 0x65, 0x63, 0x75, 0x74, 0x69, 0x6f, 0x6e, 0x49, 0x64, 0x22, 0x2d,
-	0x0a, 0x13, 0x52, 0x65, 0x6c, 0x65, 0x61, 0x73, 0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x52, 0x65, 0x73,
-	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18,
-	0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x32, 0xdf, 0x01,
-	0x0a, 0x05, 0x4c, 0x6f, 0x63, 0x6b, 0x73, 0x12, 0x44, 0x0a, 0x0b, 0x41, 0x63, 0x71, 0x75, 0x69,
-	0x72, 0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x12, 0x18, 0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e, 0x41, 0x63,
-	0x71, 0x75, 0x69, 0x72, 0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
-	0x1a, 0x19, 0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e, 0x41, 0x63, 0x71, 0x75, 0x69, 0x72, 0x65, 0x4c,
-	0x6f, 0x63, 0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x4a, 0x0a,
-	0x0d, 0x42, 0x75, 0x6c, 0x6b, 0x48, 0x65, 0x61, 0x72, 0x74, 0x62, 0x65, 0x61, 0x74, 0x12, 0x1a,
-	0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e, 0x42, 0x75, 0x6c, 0x6b, 0x48, 0x65, 0x61, 0x72, 0x74, 0x62,
-	0x65, 0x61, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1b, 0x2e, 0x6c, 0x6f, 0x63,
-	0x6b, 0x2e, 0x42, 0x75, 0x6c, 0x6b, 0x48, 0x65, 0x61, 0x72, 0x74, 0x62, 0x65, 0x61, 0x74, 0x52,
-	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x44, 0x0a, 0x0b, 0x52, 0x65, 0x6c,
-	0x65, 0x61, 0x73, 0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x12, 0x18, 0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e,
+	0x63, 0x6b, 0x22, 0x4b, 0x0a, 0x10, 0x48, 0x65, 0x61, 0x72, 0x74, 0x62, 0x65, 0x61, 0x74, 0x52,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1d, 0x0a, 0x0a, 0x70, 0x72, 0x6f, 0x63, 0x65, 0x73,
+	0x73, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x70, 0x72, 0x6f, 0x63,
+	0x65, 0x73, 0x73, 0x49, 0x64, 0x12, 0x18, 0x0a, 0x07, 0x74, 0x69, 0x6d, 0x65, 0x6f, 0x75, 0x74,
+	0x18, 0x02, 0x20, 0x01, 0x28, 0x03, 0x52, 0x07, 0x74, 0x69, 0x6d, 0x65, 0x6f, 0x75, 0x74, 0x22,
+	0x2b, 0x0a, 0x11, 0x48, 0x65, 0x61, 0x72, 0x74, 0x62, 0x65, 0x61, 0x74, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x12, 0x16, 0x0a, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x22, 0x58, 0x0a, 0x12,
 	0x52, 0x65, 0x6c, 0x65, 0x61, 0x73, 0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x52, 0x65, 0x71, 0x75, 0x65,
-	0x73, 0x74, 0x1a, 0x19, 0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e, 0x52, 0x65, 0x6c, 0x65, 0x61, 0x73,
-	0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x42,
-	0x45, 0x5a, 0x43, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x72, 0x65,
-	0x73, 0x6f, 0x6e, 0x61, 0x74, 0x65, 0x68, 0x71, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x6e, 0x61, 0x74,
-	0x65, 0x2f, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x61, 0x70, 0x70, 0x2f, 0x73,
-	0x75, 0x62, 0x73, 0x79, 0x73, 0x74, 0x65, 0x6d, 0x73, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x67, 0x72,
-	0x70, 0x63, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x73, 0x74, 0x12, 0x1f, 0x0a, 0x0b, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x5f, 0x69,
+	0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0a, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63,
+	0x65, 0x49, 0x64, 0x12, 0x21, 0x0a, 0x0c, 0x65, 0x78, 0x65, 0x63, 0x75, 0x74, 0x69, 0x6f, 0x6e,
+	0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x65, 0x78, 0x65, 0x63, 0x75,
+	0x74, 0x69, 0x6f, 0x6e, 0x49, 0x64, 0x22, 0x2d, 0x0a, 0x13, 0x52, 0x65, 0x6c, 0x65, 0x61, 0x73,
+	0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x16, 0x0a,
+	0x06, 0x73, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x01, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x73,
+	0x74, 0x61, 0x74, 0x75, 0x73, 0x32, 0xd3, 0x01, 0x0a, 0x05, 0x4c, 0x6f, 0x63, 0x6b, 0x73, 0x12,
+	0x44, 0x0a, 0x0b, 0x41, 0x63, 0x71, 0x75, 0x69, 0x72, 0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x12, 0x18,
+	0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e, 0x41, 0x63, 0x71, 0x75, 0x69, 0x72, 0x65, 0x4c, 0x6f, 0x63,
+	0x6b, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x19, 0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e,
+	0x41, 0x63, 0x71, 0x75, 0x69, 0x72, 0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x3e, 0x0a, 0x09, 0x48, 0x65, 0x61, 0x72, 0x74, 0x62, 0x65,
+	0x61, 0x74, 0x12, 0x16, 0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e, 0x48, 0x65, 0x61, 0x72, 0x74, 0x62,
+	0x65, 0x61, 0x74, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x17, 0x2e, 0x6c, 0x6f, 0x63,
+	0x6b, 0x2e, 0x48, 0x65, 0x61, 0x72, 0x74, 0x62, 0x65, 0x61, 0x74, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x44, 0x0a, 0x0b, 0x52, 0x65, 0x6c, 0x65, 0x61, 0x73, 0x65,
+	0x4c, 0x6f, 0x63, 0x6b, 0x12, 0x18, 0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e, 0x52, 0x65, 0x6c, 0x65,
+	0x61, 0x73, 0x65, 0x4c, 0x6f, 0x63, 0x6b, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x19,
+	0x2e, 0x6c, 0x6f, 0x63, 0x6b, 0x2e, 0x52, 0x65, 0x6c, 0x65, 0x61, 0x73, 0x65, 0x4c, 0x6f, 0x63,
+	0x6b, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x42, 0x45, 0x5a, 0x43, 0x67,
+	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x6e, 0x61,
+	0x74, 0x65, 0x68, 0x71, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x6e, 0x61, 0x74, 0x65, 0x2f, 0x69, 0x6e,
+	0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x61, 0x70, 0x70, 0x2f, 0x73, 0x75, 0x62, 0x73, 0x79,
+	0x73, 0x74, 0x65, 0x6d, 0x73, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x67, 0x72, 0x70, 0x63, 0x2f, 0x61,
+	0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -472,22 +471,22 @@ func file_internal_app_subsystems_api_grpc_api_lock_proto_rawDescGZIP() []byte {
 
 var file_internal_app_subsystems_api_grpc_api_lock_proto_msgTypes = make([]protoimpl.MessageInfo, 7)
 var file_internal_app_subsystems_api_grpc_api_lock_proto_goTypes = []interface{}{
-	(*Lock)(nil),                  // 0: lock.Lock
-	(*AcquireLockRequest)(nil),    // 1: lock.AcquireLockRequest
-	(*AcquireLockResponse)(nil),   // 2: lock.AcquireLockResponse
-	(*BulkHeartbeatRequest)(nil),  // 3: lock.BulkHeartbeatRequest
-	(*BulkHeartbeatResponse)(nil), // 4: lock.BulkHeartbeatResponse
-	(*ReleaseLockRequest)(nil),    // 5: lock.ReleaseLockRequest
-	(*ReleaseLockResponse)(nil),   // 6: lock.ReleaseLockResponse
+	(*Lock)(nil),                // 0: lock.Lock
+	(*AcquireLockRequest)(nil),  // 1: lock.AcquireLockRequest
+	(*AcquireLockResponse)(nil), // 2: lock.AcquireLockResponse
+	(*HeartbeatRequest)(nil),    // 3: lock.HeartbeatRequest
+	(*HeartbeatResponse)(nil),   // 4: lock.HeartbeatResponse
+	(*ReleaseLockRequest)(nil),  // 5: lock.ReleaseLockRequest
+	(*ReleaseLockResponse)(nil), // 6: lock.ReleaseLockResponse
 }
 var file_internal_app_subsystems_api_grpc_api_lock_proto_depIdxs = []int32{
 	0, // 0: lock.AcquireLockRequest.lock:type_name -> lock.Lock
 	0, // 1: lock.AcquireLockResponse.lock:type_name -> lock.Lock
 	1, // 2: lock.Locks.AcquireLock:input_type -> lock.AcquireLockRequest
-	3, // 3: lock.Locks.BulkHeartbeat:input_type -> lock.BulkHeartbeatRequest
+	3, // 3: lock.Locks.Heartbeat:input_type -> lock.HeartbeatRequest
 	5, // 4: lock.Locks.ReleaseLock:input_type -> lock.ReleaseLockRequest
 	2, // 5: lock.Locks.AcquireLock:output_type -> lock.AcquireLockResponse
-	4, // 6: lock.Locks.BulkHeartbeat:output_type -> lock.BulkHeartbeatResponse
+	4, // 6: lock.Locks.Heartbeat:output_type -> lock.HeartbeatResponse
 	6, // 7: lock.Locks.ReleaseLock:output_type -> lock.ReleaseLockResponse
 	5, // [5:8] is the sub-list for method output_type
 	2, // [2:5] is the sub-list for method input_type
@@ -539,7 +538,7 @@ func file_internal_app_subsystems_api_grpc_api_lock_proto_init() {
 			}
 		}
 		file_internal_app_subsystems_api_grpc_api_lock_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*BulkHeartbeatRequest); i {
+			switch v := v.(*HeartbeatRequest); i {
 			case 0:
 				return &v.state
 			case 1:
@@ -551,7 +550,7 @@ func file_internal_app_subsystems_api_grpc_api_lock_proto_init() {
 			}
 		}
 		file_internal_app_subsystems_api_grpc_api_lock_proto_msgTypes[4].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*BulkHeartbeatResponse); i {
+			switch v := v.(*HeartbeatResponse); i {
 			case 0:
 				return &v.state
 			case 1:
